refs #1029 Compatible with Redmine 2.0.0

--- a/app/views/wiki_extensions/_html_header.html.erb
+++ b/app/views/wiki_extensions/_html_header.html.erb
@@ -1,5 +1,5 @@
 <% # Wiki Extensions plugin for Redmine
-# Copyright (C) 2010-2011  Haruyuki Iida
+# Copyright (C) 2010-2012  Haruyuki Iida
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
@@ -25,7 +25,7 @@
 
   <% if style_sheet -%>
     <style type="text/css">
-    <%=  style_sheet.text %>
+    <%= raw style_sheet.text %>
     </style>
   <% end -%>
 
