--- a/app/views/wiki_extensions/_comments.html.erb
+++ b/app/views/wiki_extensions/_comments.html.erb
@@ -21,4 +21,4 @@ data = page.wiki_extension_data
 comments = WikiExtensionsComment.find(:all, :conditions => ['wiki_page_id = (?)', page.id])
 -%>
 
-<%= display_comments_tree(comments,nil,page,data) %>
+<%= raw display_comments_tree(comments,nil,page,data) %>
