fixes #1033 404 error occurs when creating new issue.

--- a/app/views/wiki_extensions/_issues_form_details_bottom.html.erb
+++ b/app/views/wiki_extensions/_issues_form_details_bottom.html.erb
@@ -21,7 +21,11 @@
   <%
   setting = WikiExtensionsSetting.find_or_create(project.id)
   if setting.auto_preview_enabled
-    url =  preview_edit_issue_path(:project_id => @project, :id => @issue)
+    if @issue.id.blank? 
+      url =  preview_new_issue_path(:project_id => @project, :id => @issue)
+    else
+      url =  preview_edit_issue_path(:project_id => @project, :id => @issue)
+    end
   -%>
 
     <script type="text/javascript">
