--- a/app/views/wiki_extensions_settings/_show.html.erb
+++ b/app/views/wiki_extensions_settings/_show.html.erb
@@ -1,6 +1,6 @@
 <%
 # Wiki Extensions plugin for Redmine
-# Copyright (C) 2009-2011  Haruyuki Iida
+# Copyright (C) 2009-2012  Haruyuki Iida
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
@@ -16,6 +16,21 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 -%>
+<script type="text/javascript">
+function click_wiki_menu_tab(num) {
+  var checked = $('#menus_' + num + '_enabled').is(':checked');
+  var menu_title = $('#menus_' + num + '_title');
+  var menu_page_name = $('#menus_' + num + '_page_name');
+  if (checked){
+    menu_title.removeAttr("disabled");;
+    menu_page_name.removeAttr("disabled");;
+  }else{
+    menu_title.attr("disabled", "disabled");;
+    menu_page_name.attr("disabled", "disabled");;
+  }
+}
+</script>
+
 <div id="wiki_extensions_settings">
 <%
     @wiki_extensions_setting = WikiExtensionsSetting.find_or_create(@project.id)
