refs #1117 compatible with redmine 2.1

--- a/app/views/wiki_extensions/_issues_edit_notes_bottom.html.erb
+++ b/app/views/wiki_extensions/_issues_edit_notes_bottom.html.erb
@@ -24,7 +24,7 @@
     -%>
 
     <script type="text/javascript">
-      document.observe('dom:loaded', function() {
+      $(document).ready(function() {
         setIssueNotesAutoPreview('<%=url%>');
       });
     </script>
