--- a/app/views/wiki_extensions/_issues_form_details_bottom.html.erb
+++ b/app/views/wiki_extensions/_issues_form_details_bottom.html.erb
@@ -29,7 +29,7 @@
   -%>
 
     <script type="text/javascript">
-      document.observe('dom:loaded', function() {
+      $(document).ready(function() {
         setIssueAutoPreview('<%=url%>');
       });
     </script>
