refs #1117 compatible with redmine 2.1

--- a/app/views/wiki_extensions/_body_bottom.html.erb
+++ b/app/views/wiki_extensions/_body_bottom.html.erb
@@ -43,6 +43,10 @@ context = {:project => project, :controller => controller, :request => request}
 
 <% else %>
 
+<script type="text/javascript">
+
+  
+</script>
   <%= raw javascript_tag('wiki_extension_create_table_header();') %>
 
 <% end %>
