--- a/app/views/wiki_extensions/_html_header.html.erb
+++ b/app/views/wiki_extensions/_html_header.html.erb
@@ -30,6 +30,7 @@
   <% end -%>
 
 
+  <%= javascript_include_tag(baseurl + "/plugin_assets/redmine_wiki_extensions/javascripts/jquery.tablesorter.js") %>
   <%=  stylesheet_link_tag(baseurl + "/plugin_assets/redmine_wiki_extensions/stylesheets/wiki_extensions.css") %>
   <%= javascript_include_tag(baseurl + "/plugin_assets/redmine_wiki_extensions/javascripts/wiki_extensions.js") %>
   <% if (controller.class.name == 'WikiController') %>
