--- a/app/views/wiki_extensions/_body_bottom.html.erb
+++ b/app/views/wiki_extensions/_body_bottom.html.erb
@@ -38,7 +38,7 @@ context = {:project => project, :controller => controller, :request => request}
 %>
 
 <% if action_name == 'edit' or (action_name == 'show' and page_name and page == nil) %>
-  <%= raw add_wiki_ext_tags_form(context) %>
+    <%= render :partial => 'wiki_extensions/tags_form', :locals => context %>
   <%= raw add_wiki_auto_preview(context) %>
 
 <% else %>
