fixes #1245 conflict with redmine_tags_plugin.

--- a/app/views/wiki_extensions/_tags_form.html.erb
+++ b/app/views/wiki_extensions/_tags_form.html.erb
@@ -18,7 +18,7 @@
 
 <%
    page = controller.wiki_extensions_get_current_page
-   tags = page.tags.sort { |a, b| a.name <=> b.name }
+   tags = page.wiki_ext_tags.sort { |a, b| a.name <=> b.name }
    baseurl = Redmine::Utils.relative_url_root
    img = baseurl + "/images/add.png"
 -%>
