add page_break macro
This macro behaves as follows:
  * (Media Screen) Show the mark to page break
  * (Media Print) Page break at the position of self

--HG--
branch : page-break-macro

--- a/app/views/wiki_extensions/_html_header.html.erb
+++ b/app/views/wiki_extensions/_html_header.html.erb
@@ -32,5 +32,6 @@
 
   <%= javascript_include_tag(baseurl + "/plugin_assets/redmine_wiki_extensions/javascripts/jquery.tablesorter.js") %>
   <%=  stylesheet_link_tag(baseurl + "/plugin_assets/redmine_wiki_extensions/stylesheets/wiki_extensions.css") %>
+  <%=  stylesheet_link_tag(baseurl + "/plugin_assets/redmine_wiki_extensions/stylesheets/wiki_extensions_print.css", :media => 'print') %>
   <%= javascript_include_tag(baseurl + "/plugin_assets/redmine_wiki_extensions/javascripts/wiki_extensions.js") %>
 <% end %>
